--- a/File Thực Hiện/Template/ruttien.html
+++ b/File Thực Hiện/Template/ruttien.html
@@ -1,14 +1,11 @@
+<!DOCTYPE html>
 
-
-
-
-
-                <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    
+
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Template Bank</title>
 
@@ -18,146 +15,177 @@
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/myjs.js"></script>
-
+    <script src="https://unpkg.com/vue"></script>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+</head>
 
-    
- 
-  </head>
-  <body>
-
-</div>
-    <div> 
-
-    <!-- Navigation -->
-    <nav class="navbar navbar-inverse navbar-top" role="navigation">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+<body>
+    <div>
+        <!-- Navigation -->
+        <nav class="navbar navbar-inverse navbar-top" role="navigation">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="http://cijulenlinea.ucr.ac.cr/dev-users/">
+                <a class="navbar-brand" href="http://cijulenlinea.ucr.ac.cr/dev-users/">
                 <img src="http://placehold.it/200x50&text=LOGO" alt="LOGO">
             </a>
-        </div>
-        <!-- Top Menu Items -->
-        
-        <ul class="nav navbar-right top-nav">
-            <li>
-                <div style="margin-top:12px">
-                <form class="navbar-form " role="search">
-                    <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Tra cứu số tài khoản" name="q">
-                        <div class="input-group-btn">
-                            <button class="btn btn-default" type="submit"><i class="fa fa-fw fa-search"></i></button>
-                        </div>
+            </div>
+            <!-- Top Menu Items -->
+
+            <ul class="nav navbar-right top-nav">
+                <li>
+                    <div style="margin-top:12px">
+                        <form class="navbar-form " role="search">
+                            <div class="input-group">
+                                <input type="text" class="form-control" placeholder="Tra cứu số tài khoản" name="q">
+                                <div class="input-group-btn">
+                                    <button class="btn btn-default" type="submit"><i class="fa fa-fw fa-search"></i></button>
+                                </div>
+                            </div>
+                        </form>
                     </div>
-                </form>
-                </div>
-            </li>
-
-            <li><a data-placement="bottom" data-toggle="tooltip" href="baocao.html" data-original-title="Thống kê"><i class="fa fa-bar-chart-o"></i></a></li> 
-
-            <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown"> <i class="fa fa-fw fa-user"></i> Admin User <b class="fa fa-angle-down"></b></a>
-                <ul class="dropdown-menu">
-                    <li><a href="chinhsuathongtin.html"><i class="fa fa-fw fa-pencil"></i> Chỉnh sửa thông tin</a></li>
-                
-                    <li class="divider"></li>
-
-                    <li><a href="#"><i class="fa fa-fw fa-power-off"></i> Đăng xuất</a></li>
-                </ul>
-            </li>
-        </ul>
-
-        <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
-        <div class="collapse navbar-collapse navbar-ex1-collapse">
-            <ul class="nav navbar-nav side-nav">
-                <li>
-                    <a href="ruttien.html"><i class="fa fa-fw fa-credit-card"></i> Rút tiền </a> 
                 </li>
 
-                <li>
-                    <a href="chuyentien.html"><i class="fa fa-fw fa-exchange"></i> Chuyển tiền </a>
-                </li>
+                <li><a data-placement="bottom" data-toggle="tooltip" href="baocao.html" data-original-title="Thống kê"><i class="fa fa-bar-chart-o"></i></a></li>
 
-                <li>
-                    <a href="naptien.html"><i class="fa fa-fw fa-plus-square"></i> Nạp tiền </a>
-                </li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"> <i class="fa fa-fw fa-user"></i> Admin User <b class="fa fa-angle-down"></b></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="chinhsuathongtin.html"><i class="fa fa-fw fa-pencil"></i> Chỉnh sửa thông tin</a></li>
 
-                <li>
-                    <a href="lapsotietkiem.html"><i class="fa fa-fw fa-book"></i> Lập sổ tiết kiệm </a>
-                </li>
+                        <li class="divider"></li>
 
-                <li>
-                    <a href="#" data-toggle="collapse" data-target="#submenu-1"><i class="fa fa-fw fa-line-chart"></i> Báo cáo thống kê <i class="fa fa-fw fa-angle-down pull-right"></i></a>
-                    <ul id="submenu-1" class="collapse">
-                        <li><a href="baocaothang.html"><i class="fa fa-angle-right"></i> Theo tháng</a></li>
-                        <li><a href="baocaonam.html"><i class="fa fa-angle-right"></i> Theo năm</a></li>
-                        <li><a href="baocao.html"><i class="fa fa-angle-right"></i> Xem tất cả</a></li>
+                        <li><a href="#"><i class="fa fa-fw fa-power-off"></i> Đăng xuất</a></li>
                     </ul>
                 </li>
-             
             </ul>
-        </div>
-        <!-- /.navbar-collapse -->
-    </nav>
+
+            <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
+            <div class="collapse navbar-collapse navbar-ex1-collapse">
+                <ul class="nav navbar-nav side-nav">
+                    <li>
+                        <a href="ruttien.html"><i class="fa fa-fw fa-credit-card"></i> Rút tiền </a>
+                    </li>
+
+                    <li>
+                        <a href="chuyentien.html"><i class="fa fa-fw fa-exchange"></i> Chuyển tiền </a>
+                    </li>
+
+                    <li>
+                        <a href="naptien.html"><i class="fa fa-fw fa-plus-square"></i> Nạp tiền </a>
+                    </li>
+
+                    <li>
+                        <a href="lapsotietkiem.html"><i class="fa fa-fw fa-book"></i> Lập sổ tiết kiệm </a>
+                    </li>
+
+                    <li>
+                        <a href="#" data-toggle="collapse" data-target="#submenu-1"><i class="fa fa-fw fa-line-chart"></i> Báo cáo thống kê <i class="fa fa-fw fa-angle-down pull-right"></i></a>
+                        <ul id="submenu-1" class="collapse">
+                            <li><a href="baocaothang.html"><i class="fa fa-angle-right"></i> Theo tháng</a></li>
+                            <li><a href="baocaonam.html"><i class="fa fa-angle-right"></i> Theo năm</a></li>
+                            <li><a href="baocao.html"><i class="fa fa-angle-right"></i> Xem tất cả</a></li>
+                        </ul>
+                    </li>
+
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </nav>
     </div>
     <div id="wrapper">
         <div id="page-wrapper">
-        <div class="container-fluid">
-            <!-- Page Heading -->
-            <div class="row" id="main" >
-                <div class="col-sm-12 col-md-12 well" id="content">
-                    <h1>Rút tiền</h1>
+            <div class="container-fluid">
+                <!-- Page Heading -->
+                <div class="row" id="main">
+                    <div class="col-sm-12 col-md-12 well" id="content">
+                        <h1>Rút tiền</h1>
+                    </div>
                 </div>
-            </div>
 
-                            <form class="form-horizontal">
-                        <fieldset>
-
+                <form class="form-horizontal" id="rutTienApp">
+                    <fieldset>
 
                         <div class="form-group">
-                          <label class="col-md-4 control-label" for="txtTaiKhoanRut">Tài khoản rút tiền</label>  
-                          <div class="col-md-5">
-                          <input id="txtTaiKhoanRut" name="txtTaiKhoanRut" type="text" placeholder="Nhập số tài khoản" class="form-control input-md" required="">
-                            
-                          </div>
+                            <label class="col-md-4 control-label" for="txtCMND">Số CMND</label>
+                            <div class="col-md-5">
+                                <div class="input-group input-group-md">
+                                    <input id="txtCMND" name="txtCMND" type="text" placeholder="Nhập số CMND" class="form-control input-md" v-model="cmnd">
+                                    <div class="input-group-btn">
+                                        <button id="btnKiemTraTaiKhoan" name="btnKiemTraTaiKhoan" class="btn full-width" v-on:click="kiemTraTaiKhoan">Kiểm tra</button>
+                                    </div>
+                                    <!-- /btn-group -->
+                                </div>
+                                <!-- /input-group -->
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="col-md-4 control-label" for="txtTaiKhoanRut">Tên khách hàng</label>
+                            <div class="col-md-5">
+                                <input readonly id="txtTaiKhoanRut" name="txtTaiKhoanRut" type="text" placeholder="Tên khách hàng" v-bind:value="cmnd" class="form-control input-md"
+                                    required="">
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="col-md-4 control-label" for="txtTaiKhoanRut">Số tài khoản</label>
+                            <div class="col-md-5">
+                                <input readonly id="txtTaiKhoanRut" name="txtTaiKhoanRut" type="text" placeholder="Nhập số tài khoản" class="form-control input-md"
+                                    required="">
+                            </div>
                         </div>
 
                         <!-- Text input-->
                         <div class="form-group">
-                          <label class="col-md-4 control-label" for="txtSoTienRut" >Số tiền rút</label>  
-                          <div class="col-md-5">
-                          <input id="txtSoTienRut" name="txtSoTienRut" type="text" placeholder="Nhập số tiền" class="form-control input-md" required="">
-                            
-                          </div>
+                            <label class="col-md-4 control-label" for="txtSoDuKhaDung">Số dư khả dụng</label>
+                            <div class="col-md-5">
+                                <input readonly id="txtSoDuKhaDung" name="txtSoDuKhaDung" type="text" placeholder="Số dư khả dụng" class="form-control input-md"
+                                    required="">
+                            </div>
+                        </div>
+
+                        <!-- Text input-->
+                        <div class="form-group">
+                            <label class="col-md-4 control-label" for="txtSoTienRut">Số tiền rút</label>
+                            <div class="col-md-5">
+                                <input id="txtSoTienRut" name="txtSoTienRut" type="text" placeholder="Nhập số tiền" class="form-control input-md" required="">
+                            </div>
                         </div>
 
                         <div class="form-group">
-                          <label class="col-md-4 control-label" for="btnRutTien"></label>
-                          <div class="col-md-8">
-                            <button id="btnRutTien" name="btnRutTien" class="btn btn-primary">Rút tiền</button>
-                            <button id="btnHuy" name="btnHuy" class="btn btn-default">Huỷ</button>
-                          </div>
+                            <label class="col-md-4 control-label" for="txtNoiDung">Nội dung</label>
+                            <div class="col-md-5">
+                                <input id="txtNoiDung" name="txtNoiDung" type="text" placeholder="Nhập nội dung" class="form-control input-md" required="">
+                            </div>
                         </div>
 
+                        <div class="form-group">
+                            <label class="col-md-4 control-label" for="btnRutTien"></label>
+                            <div class="col-md-8">
+                                <button id="btnRutTien" name="btnRutTien" class="btn btn-primary" v-on:click="rutTien">Rút tiền</button>
+                                <button id="btnHuy" name="btnHuy" class="btn btn-default">Huỷ</button>
+                            </div>
+                        </div>
 
-                </fieldset>
+                    </fieldset>
                 </form>
-            <!-- /.row -->
+                <!-- /.row -->
+            </div>
+            <!-- /.container-fluid -->
         </div>
-        <!-- /.container-fluid -->
-        </div>
-    <!-- /#page-wrapper -->
+        <!-- /#page-wrapper -->
     </div>
-  </body>
+</body>
+
 </html>
