--- a/File Thực Hiện/Template/chuyentien.html
+++ b/File Thực Hiện/Template/chuyentien.html
@@ -1,8 +1,4 @@
 <!DOCTYPE html>
-
-
-
-
 <html lang="en">
 
 <head>
@@ -18,23 +14,18 @@
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/myjs.js"></script>
-
+    <script src="https://unpkg.com/vue"></script>
+    <script src="js/chuyentien.js"></script>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-
-
-
 </head>
 
 <body>
-
-    </div>
     <div>
-
         <!-- Navigation -->
         <nav class="navbar navbar-inverse navbar-top" role="navigation">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -44,7 +35,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
-            </button>
+                </button>
                 <a class="navbar-brand" href="http://cijulenlinea.ucr.ac.cr/dev-users/">
                 <img src="http://placehold.it/200x50&text=LOGO" alt="LOGO">
             </a>
@@ -56,7 +47,7 @@
                     <div style="margin-top:12px">
                         <form class="navbar-form " role="search">
                             <div class="input-group">
-                                <input type="text" class="form-control" placeholder="Tra cứu số tài khoản" name="q">
+                                <input type="text" class="form-control" placeholder="Tra cứu số tài khoản">
                                 <div class="input-group-btn">
                                     <button class="btn btn-default" type="submit"><i class="fa fa-fw fa-search"></i></button>
                                 </div>
@@ -68,13 +59,13 @@
                 <li><a data-placement="bottom" data-toggle="tooltip" href="baocao.html" data-original-title="Thống kê"><i class="fa fa-bar-chart-o"></i></a></li>
 
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"> <i class="fa fa-fw fa-user"></i> Admin User <b class="fa fa-angle-down"></b></a>
+                    <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown"> <i class="fa fa-fw fa-user"></i> Admin User <b class="fa fa-angle-down"></b></a>
                     <ul class="dropdown-menu">
                         <li><a href="chinhsuathongtin.html"><i class="fa fa-fw fa-pencil"></i> Chỉnh sửa thông tin</a></li>
 
                         <li class="divider"></li>
 
-                        <li><a href="#"><i class="fa fa-fw fa-power-off"></i> Đăng xuất</a></li>
+                        <li><a href="javascript:void(0)"><i class="fa fa-fw fa-power-off"></i> Đăng xuất</a></li>
                     </ul>
                 </li>
             </ul>
@@ -99,7 +90,7 @@
                     </li>
 
                     <li>
-                        <a href="#" data-toggle="collapse" data-target="#submenu-1"><i class="fa fa-fw fa-line-chart"></i> Báo cáo thống kê <i class="fa fa-fw fa-angle-down pull-right"></i></a>
+                        <a href="javascript:void(0)" data-toggle="collapse" data-target="#submenu-1"><i class="fa fa-fw fa-line-chart"></i> Báo cáo thống kê <i class="fa fa-fw fa-angle-down pull-right"></i></a>
                         <ul id="submenu-1" class="collapse">
                             <li><a href="baocaothang.html"><i class="fa fa-angle-right"></i> Theo tháng</a></li>
                             <li><a href="baocaonam.html"><i class="fa fa-angle-right"></i> Theo năm</a></li>
@@ -121,92 +112,86 @@
                         <h1>Chuyển tiền</h1>
                     </div>
                 </div>
-
-                <div class="row">
+                <div class="row" id="chuyenTienApp">
                     <div class="col-xs-12 col-lg-7">
                         <div class="panel panel-default">
-
                             <div class="panel-body">
-
-                                <form class="form-horizontal">
+                                <form class="form-horizontal" >
                                     <fieldset>
 
                                         <!-- Text input-->
                                         <div class="form-group">
-                                            <label class="col-md-4 control-label" for="txtTaiKhoanChuyen">Tài khoản chuyển</label>
+                                            <label class="col-md-4 control-label">Tài khoản chuyển</label>
                                             <div class="col-md-6">
                                                 <div class="input-group input-group-md">
-                                                    <input id="txtTaiKhoanChuyen" name="txtTaiKhoanChuyen" type="text" placeholder="Nhập số tài khoản" class="form-control input-md">
+                                                    <input type="text" placeholder="Nhập số tài khoản" class="form-control input-md" v-model="taiKhoanGui.MaSoTaiKhoan" v-on:blur="kiemTraTaiKhoanGui">
                                                     <div class="input-group-btn">
-                                                        <button id="btnKiemTraTaiKhoanNhan" name="btnKiemTraTaiKhoanChuyen" class="btn full-width">Kiểm tra</button>
+                                                        <button type="button" class="btn full-width" v-on:click="kiemTraTaiKhoanGui">Kiểm tra</button>
                                                     </div>
                                                     <!-- /btn-group -->
                                                 </div>
-
                                             </div>
                                         </div>
 
                                         <div class="form-group">
-                                            <label class="col-md-4 control-label" for="txtTaiKhoanNhan">Tài khoản nhận</label>
+                                            <label class="col-md-4 control-label">Tài khoản nhận</label>
                                             <div class="col-md-6">
                                                 <div class="input-group input-group-md">
-                                                    <input id="txtTaiKhoanNhan" name="txtTaiKhoanNhan" type="text" placeholder="Nhập số tài khoản" class="form-control input-md">
+                                                    <input type="text" placeholder="Nhập số tài khoản" class="form-control input-md" v-model="taiKhoanNhan.MaSoTaiKhoan" v-on:blur="kiemTraTaiKhoanNhan">
                                                     <div class="input-group-btn">
-                                                        <button id="btnKiemTraTaiKhoanNhan" name="btnKiemTraTaiKhoanNhan" class="btn full-width">Kiểm tra</button>
+                                                        <button type="button" class="btn full-width" v-on:click="kiemTraTaiKhoanNhan">Kiểm tra</button>
                                                     </div>
                                                     <!-- /btn-group -->
                                                 </div>
                                                 <!-- /input-group -->
                                             </div>
-
                                         </div>
 
-                                        <div class="form-group">
-                                            <label class="col-md-4 control-label" for="txtSoTienChuyen">Số tiền chuyển</label>
+                                        <div class="form-group" v-show="display.soTienChuyen">
+                                            <label class="col-md-4 control-label">Số tiền chuyển</label>
                                             <div class="col-md-6">
-                                                <input id="txtSoTienChuyen" name="txtSoTienChuyen" type="text" placeholder="Nhập số tiền" class="form-control input-md">
+                                                <input type="number" placeholder="Nhập số tiền" class="form-control input-md" v-model="soTien">
                                             </div>
                                         </div>
 
-
-                                        <div class="form-group">
-                                            <label class="col-md-4 control-label" for="txtGhiChu">Ghi chú</label>
+                                        <div class="form-group" v-show="display.soTienChuyen">
+                                            <label class="col-md-4 control-label">Nội dung</label>
                                             <div class="col-md-6">
-                                                <textarea class="form-control input-md" rows="5" id="comment"></textarea>
+                                                <textarea class="form-control input-md" rows="5" id="comment" v-model="noiDung"></textarea>
                                             </div>
                                         </div>
-
-
                                     </fieldset>
                                 </form>
-
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-5 col-xs-12 col-md-12">
-
                         <div class="panel panel-default">
                             <div class="panel-heading">Thông tin giao dịch</div>
                             <div class="panel-body">
                                 <p>
-                                    Người chuyển:
-                                    <br> Người nhận:
-                                    <br> Số tiền:
+                                    Người chuyển: {{nguoiGui.HoTen}}
+                                    <br> CMND: {{nguoiGui.CMND}}
+                                    <br> Số tài khoản: {{taiKhoanGui.MaSoTaiKhoan}}
 
+                                    <hr> Người nhận: {{nguoiNhan.HoTen}}
+                                    <br> CMND: {{nguoiNhan.CMND}}
+                                    <br> Số tài khoản: {{taiKhoanNhan.MaSoTaiKhoan}}
+
+                                    <hr> Số tiền: {{soTien}}
+                                    <br> Nội dung: {{noiDung}}
+                                    <br>
                                 </p>
                                 <hr>
                                 <div class="checkbox">
                                     <label><input type="checkbox" value="">Đã xác nhận thông tin</label>
                                 </div>
-                                <button id="btnChuyenTien" name="btnChuyenTien" class="btn btn-primary btn-block">Chuyển tiền</button>
+                                <button type="button" class="btn btn-primary btn-block">Chuyển tiền</button>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-
-
-
             <!-- /.row -->
         </div>
         <!-- /.container-fluid -->
