--- a/File Thực Hiện/Template/ruttien.html
+++ b/File Thực Hiện/Template/ruttien.html
@@ -16,6 +16,7 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/ruttien.js"></script>
     <script src="https://unpkg.com/vue"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
