--- a/File Thực Hiện/Template/chuyentien.html
+++ b/File Thực Hiện/Template/chuyentien.html
@@ -16,6 +16,7 @@
     <script src="js/myjs.js"></script>
     <script src="https://unpkg.com/vue"></script>
     <script src="js/chuyentien.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -150,14 +151,21 @@
                                         <div class="form-group" v-show="display.soTienChuyen">
                                             <label class="col-md-4 control-label">Số tiền chuyển</label>
                                             <div class="col-md-6">
-                                                <input type="number" placeholder="Nhập số tiền" class="form-control input-md" v-model="soTien">
+                                                <input type="number" placeholder="Nhập số tiền" class="form-control input-md" v-model="giaoDich.SoTien" v-on:blur="validate">
                                             </div>
                                         </div>
 
                                         <div class="form-group" v-show="display.soTienChuyen">
                                             <label class="col-md-4 control-label">Nội dung</label>
                                             <div class="col-md-6">
-                                                <textarea class="form-control input-md" rows="5" id="comment" v-model="noiDung"></textarea>
+                                                <textarea class="form-control input-md" rows="5" id="comment" v-model="giaoDich.NoiDung"></textarea>
+                                            </div>
+                                        </div>
+
+                                        <div class="form-group" v-show="message.content != ''">
+                                            <label class="col-md-4 control-label"></label>
+                                            <div class="col-md-6">
+                                                <div class="alert" v-bind:class="message.type">{{message.content}}</div>
                                             </div>
                                         </div>
                                     </fieldset>
@@ -170,23 +178,28 @@
                             <div class="panel-heading">Thông tin giao dịch</div>
                             <div class="panel-body">
                                 <p>
-                                    Người chuyển: {{nguoiGui.HoTen}}
-                                    <br> CMND: {{nguoiGui.CMND}}
-                                    <br> Số tài khoản: {{taiKhoanGui.MaSoTaiKhoan}}
+                                    Người chuyển: <b>{{nguoiGui.HoTen}}</b>
+                                    <br> CMND: <b>{{nguoiGui.CMND}}</b>
+                                    <br> Số tài khoản: <b> {{taiKhoanGui.MaSoTaiKhoan}}</b>
+                                    <br> Số dư khả dụng: <b> {{taiKhoanGui.SoDuKhaDung}}</b>
 
-                                    <hr> Người nhận: {{nguoiNhan.HoTen}}
-                                    <br> CMND: {{nguoiNhan.CMND}}
-                                    <br> Số tài khoản: {{taiKhoanNhan.MaSoTaiKhoan}}
+                                    <hr> Người nhận: <b> {{nguoiNhan.HoTen}}</b>
+                                    <br> CMND: <b>{{nguoiNhan.CMND}}</b>
+                                    <br> Số tài khoản: <b>{{taiKhoanNhan.MaSoTaiKhoan}}</b>
+                                    <br> Số dư khả dụng: <b> {{taiKhoanNhan.SoDuKhaDung}}</b>
 
-                                    <hr> Số tiền: {{soTien}}
-                                    <br> Nội dung: {{noiDung}}
+                                    <hr> Số tiền: <b>{{giaoDich.SoTien}}</b>
+                                    <br> Nội dung: <b>{{giaoDich.NoiDung}}</b>
                                     <br>
                                 </p>
                                 <hr>
                                 <div class="checkbox">
-                                    <label><input type="checkbox" value="">Đã xác nhận thông tin</label>
+                                    <label><input type="checkbox" v-model="daXacNhanThongTin">Đã xác nhận thông tin</label>
                                 </div>
-                                <button type="button" class="btn btn-primary btn-block">Chuyển tiền</button>
+                                <div class="btn-group btn-group-justified">
+                                    <a href="javascript:void(0)" class="btn btn-primary" v-on:click="chuyenTien" :disabled="!daXacNhanThongTin">Chuyển tiền</a>
+                                    <a href="javascript:void(0)" class="btn btn-default" v-on:click="clear">Giao dịch mới</a>
+                                </div>
                             </div>
                         </div>
                     </div>
