done function Thong Ke Khach Hang

--- a/File Thực Hiện/Template/naptien.html
+++ b/File Thực Hiện/Template/naptien.html
@@ -83,6 +83,10 @@
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav side-nav">
                     <li>
+                        <a href="index.html"><i class="fa fa-fw fa-home"></i> Dashboard </a>
+                    </li>
+
+                    <li>
                         <a href="ruttien.html"><i class="fa fa-fw fa-credit-card"></i> Rút tiền </a>
                     </li>
 
@@ -101,9 +105,12 @@
                     <li>
                         <a href="#" data-toggle="collapse" data-target="#submenu-1"><i class="fa fa-fw fa-line-chart"></i> Báo cáo thống kê <i class="fa fa-fw fa-angle-down pull-right"></i></a>
                         <ul id="submenu-1" class="collapse">
-                            <li><a href="baocaothang.html"><i class="fa fa-angle-right"></i> Theo tháng</a></li>
-                            <li><a href="baocaonam.html"><i class="fa fa-angle-right"></i> Theo năm</a></li>
-                            <li><a href="baocao.html"><i class="fa fa-angle-right"></i> Xem tất cả</a></li>
+                            <li><a href="thongkekhachhang.html"><i class="fa fa-angle-right"></i> Khách hàng</a></li>
+                            <li><a href="thongketaikhoan.html"><i class="fa fa-angle-right"></i> Tài khoản</a></li>
+                            <li><a href="thongkeruttien.html"><i class="fa fa-angle-right"></i> GD rút tiền</a></li>
+                            <li><a href="thongkechuyentien.html"><i class="fa fa-angle-right"></i> GD Chuyển tiền</a></li>
+                            <li><a href="thongkenaptien.html"><i class="fa fa-angle-right"></i> GD Nạp tiền</a></li>
+                            <li><a href="thongkesotietkiem.html"><i class="fa fa-angle-right"></i> Sổ tiết kiệm</a></li>
                         </ul>
                     </li>
 
