--- a/File Thực Hiện/Template/css/mystyle.css
+++ b/File Thực Hiện/Template/css/mystyle.css
@@ -1,4 +1,4 @@
-@import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'); 
+@import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css');
 @media(min-width:768px) {
     body {
         /*margin-top: 50px;*/
@@ -7,11 +7,11 @@
 }
 
 #wrapper {
-    padding-left: 0;    
+    padding-left: 0;
 }
 
 #page-wrapper {
-    width: 100%;        
+    width: 100%;
     padding: 0;
     background-color: #fff;
 }
@@ -20,11 +20,11 @@
     #wrapper {
         padding-left: 225px;
     }
-
     #page-wrapper {
         padding: 10px 10px;
     }
 }
+
 
 /* Top Navigation */
 
@@ -61,39 +61,38 @@
     border-top-left-radius: 0;
     border-top-right-radius: 0;
     background-color: #fff;
-    -webkit-box-shadow: 0 6px 12px rgba(0,0,0,.175);
-    box-shadow: 0 6px 12px rgba(0,0,0,.175);
+    -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
 }
 
 .top-nav>.open>.dropdown-menu>li>a {
     white-space: normal;
 }
 
+
 /* Side Navigation */
 
 @media(min-width:768px) {
     .side-nav {
         position: fixed;
-        top: 60px;
+        top: 0px;
         left: 225px;
         width: 225px;
         margin-left: -225px;
         border: none;
         border-radius: 0;
-        border-top: 1px rgba(0,0,0,.5) solid;
+        border-top: 1px rgba(0, 0, 0, .5) solid;
         overflow-y: auto;
-        background-color: #222; 
+        background-color: #222;
         /*background-color: #337ab7;*/
         bottom: 0;
         overflow-x: hidden;
         padding-bottom: 40px;
     }
-
     .side-nav>li>a {
         width: 225px;
-        border-bottom: 1px rgba(0,0,0,.3) solid;
+        border-bottom: 1px rgba(0, 0, 0, .3) solid;
     }
-
     .side-nav li a:hover,
     .side-nav li a:focus {
         outline: none;
@@ -103,7 +102,7 @@
 
 .side-nav>li>ul {
     padding: 0;
-    border-bottom: 1px rgba(0,0,0,.3) solid;
+    border-bottom: 1px rgba(0, 0, 0, .3) solid;
 }
 
 .side-nav>li>ul>li>a {
@@ -111,33 +110,57 @@
     padding: 10px 15px 10px 38px;
     text-decoration: none;
     /*color: #999;*/
-    color: #fff;    
+    color: #fff;
 }
 
 .side-nav>li>ul>li>a:hover {
     color: #fff;
 }
 
-.navbar .nav > li > a > .label {
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  border-radius: 50%;
-  position: absolute;
-  top: 14px;
-  right: 6px;
-  font-size: 10px;
-  font-weight: normal;
-  min-width: 15px;
-  min-height: 15px;
-  line-height: 1.0em;
-  text-align: center;
-  padding: 2px;
+.navbar .nav>li>a>.label {
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    position: absolute;
+    top: 14px;
+    right: 6px;
+    font-size: 10px;
+    font-weight: normal;
+    min-width: 15px;
+    min-height: 15px;
+    line-height: 1.0em;
+    text-align: center;
+    padding: 2px;
 }
 
-.navbar .nav > li > a:hover > .label {
-  top: 10px;
+.navbar .nav>li>a:hover>.label {
+    top: 10px;
 }
 
 .navbar-brand {
     padding: 5px 15px;
+}
+
+h1,
+.h1,
+h2,
+.h2,
+h3,
+.h3 {
+    margin-top: 10px !important;
+    margin-bottom: 10px;
+}
+
+.dataTables_filter {
+    float: right;
+}
+
+.dataTables_paginate {
+    float: right;
+    margin-top: -30px;
+}
+
+.navbar-nav>li>a {
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
