--- a/File Thực Hiện/Template/thongkechuyentien.html
+++ b/File Thực Hiện/Template/thongkechuyentien.html
@@ -10,10 +10,28 @@
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+
     <link href="css/mystyle.css" rel="stylesheet">
+
     <script src="js/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
     <script src="js/myjs.js"></script>
+
+    <script src="js/bootstrap.min.js"></script>
+
+    <script src="js/vue.js"></script>
+
+    <!--<script src="js/datatable.min.js"></script>-->
+    <script src="js/moment.min.js"></script>
+
+    <script src="js/thongkechuyentien.js"></script>
+    <script src="js/axios.min.js"></script>
+
+    <script src="https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.15/js/dataTables.bootstrap.min.js"></script>
+    <script src="https://cdn.datatables.net/autofill/2.2.0/js/dataTables.autoFill.min.js"></script>
+    <script src="https://cdn.datatables.net/autofill/2.2.0/js/autoFill.bootstrap.min.js"></script>
+
+    <script src="canvasjs/canvasjs.min.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -27,10 +45,7 @@
 </head>
 
 <body>
-
-    </div>
     <div>
-
         <!-- Navigation -->
         <nav class="navbar navbar-inverse navbar-top" role="navigation">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -102,7 +117,6 @@
                         <a href="#" data-toggle="collapse" data-target="#submenu-1"><i class="fa fa-fw fa-line-chart"></i> Báo cáo thống kê <i class="fa fa-fw fa-angle-down pull-right"></i></a>
                         <ul id="submenu-1" class="collapse">
                             <li><a href="thongkekhachhang.html"><i class="fa fa-angle-right"></i> Khách hàng</a></li>
-                            <li><a href="thongketaikhoan.html"><i class="fa fa-angle-right"></i> Tài khoản</a></li>
                             <li><a href="thongkeruttien.html"><i class="fa fa-angle-right"></i> GD rút tiền</a></li>
                             <li><a href="thongkechuyentien.html"><i class="fa fa-angle-right"></i> GD Chuyển tiền</a></li>
                             <li><a href="thongkenaptien.html"><i class="fa fa-angle-right"></i> GD Nạp tiền</a></li>
@@ -117,13 +131,159 @@
     </div>
     <div id="wrapper">
         <div id="page-wrapper">
-            <div class="container-fluid">
+            <div class="container-fluid" id="thongKeGiaoDichApp">
                 <!-- Page Heading -->
                 <div class="row" id="main">
                     <div class="col-sm-12 col-md-12 well" id="content">
-                        <h1>Hổng có!</h1>
+                        <h1 class="col-md-4">Thống kê giao dịch chuyển tiền</h1>
+                        <form class="form-horizontal col-md-8" style="margin-top: 10px;">
+                            <fieldset>
+
+                                <!-- Text input-->
+                                <div class="form-group col-md-5 col-sm-12">
+                                    <label class="col-md-4 control-label">Từ ngày</label>
+                                    <div class="col-md-8">
+                                        <div class="input-group input-group-md">
+                                            <input type="text" placeholder="Click để chọn" class="form-control input-md datepicker" v-model="tuNgay">
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="form-group col-md-5 col-sm-12">
+                                    <label class="col-md-4 control-label">Đến ngày</label>
+                                    <div class="col-md-8">
+                                        <div class="input-group input-group-md">
+                                            <input type="text" placeholder="Click để chọn" class="form-control input-md datepicker" v-model="denNgay">
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="form-group col-md-2 col-sm-12">
+                                    <div class="col-md-12">
+                                        <div class="input-group input-group-md">
+                                            <button type="button" class="btn btn-primary full-width" v-on:click="fetchData">Xem báo cáo</button>
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </fieldset>
+                        </form>
                     </div>
                 </div>
+
+                <div class="row">
+                    <div class="col-xs-12 col-lg-12">
+
+                        <!-- Nav tabs -->
+                        <ul class="nav nav-tabs" role="tablist">
+                            <li class="active"><a href="#home" role="tab" data-toggle="tab">Thống kê theo ngày</a></li>
+                            <li><a href="#profile" role="tab" data-toggle="tab">Thống kê theo tháng</a></li>
+                            <li><a href="#messages" role="tab" data-toggle="tab">Thống kê theo năm</a></li>
+                        </ul>
+
+                        <!-- Tab panes -->
+                        <div class="tab-content">
+                            <div class="tab-pane active" id="home">
+                                <div class="panel panel-default">
+                                    <div class="panel-body">
+
+                                        <div class="col-md-3">
+
+                                            <table class="table table-striped table-bordered" v-show="display.gdTheoNgay">
+                                                <thead>
+                                                    <tr>
+                                                        <th>Ngày</th>
+                                                        <th>Số giao dịch</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    <tr v-for="item in gdTheoNgays">
+                                                        <td>{{formatDate(item.Ngay)}}</td>
+                                                        <td>{{item.Count}}</td>
+                                                    </tr>
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                        <div class="col-md-9" v-show="display.gdTheoNgay" style="min-height: 400px;">
+                                            <div id="chartTheoNgay" style="width: 100%;"></div>
+                                        </div>
+
+                                        <div class="form-group" v-show="message.content != ''">
+                                            <div class="col-md-12">
+                                                <div class="alert" v-bind:class="message.type">{{message.content}}</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="tab-pane" id="profile">
+                                <div class="panel panel-default">
+                                    <div class="panel-body">
+
+                                        <div class="col-md-3" v-show="display.gdTheoNgay">
+                                            <table class="table table-striped table-bordered">
+                                                <thead>
+                                                    <tr>
+                                                        <th>Tháng</th>
+                                                        <th>Năm</th>
+                                                        <th>Số lượng giao dịch</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    <tr v-for="item in gdTheoThangs">
+                                                        <td>{{item.Thang}}</td>
+                                                        <td>{{item.Nam}}</td>
+                                                        <td>{{item.Count}}</td>
+                                                    </tr>
+                                                </tbody>
+                                            </table>
+                                        </div>
+
+                                        <div class="col-md-9" style="min-height: 400px;">
+                                            <div id="chartTheoThang" style="width: 100%;"></div>
+                                        </div>
+
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="tab-pane" id="messages">
+                                <div class="panel panel-default">
+                                    <div class="panel-body">
+                                        <div class="col-md-3">
+                                            <table class="table table-striped table-bordered">
+                                                <thead>
+                                                    <tr>
+                                                        <th>Năm</th>
+                                                        <th>Số lượng giao dịch</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    <tr v-for="item in gdTheoNams">
+                                                        <td>{{item.Nam}}</td>
+                                                        <td>{{item.Count}}</td>
+                                                    </tr>
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                        <div class="col-md-9" style="min-height: 400px;">
+                                            <div id="chartTheoNam" style="width: 100%;"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-xs-12 col-lg-12">
+                        <h3>Danh sách giao dịch rút tiền {{tuNgay}} đến {{denNgay}}</h3>
+                        <table id="giaoDichs" class="table table-bordered table-striped" width="100%">
+                        </table>
+                    </div>
+                </div>
+
                 <!-- /.row -->
             </div>
             <!-- /.container-fluid -->
